# SIE-Core

./: .gitignore  Cargo.toml  LICENSE  README.md  pyproject.toml
.github/: FUNDING.yml
rust_src/: lib.rs
src/sie_core/: __init__.py  core.py  egraph.py
tests/: test_egraph.py  test_rust_egraph.py
