[package]
name = "sie-core"
version = "0.1.0"
edition = "2021"

[lib]
name = "sie_core_rust"
crate-type = ["cdylib"]
path = "rust_src/lib.rs"

[dependencies]
pyo3 = { version = "0.23", features = ["extension-module"] }
egg = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
